--- a/index.html
+++ b/index.html
@@ -3,77 +3,120 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Effective Solutions for Your Business</title>
+    <title>WEBSTUDIO-Effective Solutions for Your Business</title>
   </head>
   <body>
     <header>
-      <a href="/" class="link"> <img src="images/Logo.png" alt="logo" /></a>
+      <a href="/index.html" class="link">WEBSTUDIO</a>
       <nav>
         <ul>
-          <li>Studio</li>
-          <li>Portfolio</li>
-          <li>Contacts</li>
-          <li>info@devstudio.com</li>
-          <li>+11 (000) 111-11-11</li>
+          <li>
+            <a href="/" class="link">Studio</a>
+          </li>
+          <li>
+            <a href="/" class="link">Portfolio</a>
+          </li>
+          <li>
+            <a href="/" class="link">Contacts</a>
+          </li>
         </ul>
       </nav>
+      <address>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
     </header>
     <main>
       <section>
-        <h1>
-          Effective Solutions <br />
-          for Your Business
-        </h1>
-        <button type="submit">Order Service</button>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
       </section>
       <section>
         <ul>
-          <li>Strategy</li>
-          <p>
-            Our goal is to identify the business problem to walk away with the
-            perfect and creative solution.
-          </p>
-          <li>Punctuality</li>
-          <a>
-            Bring the key message to the brand's audience for the best price
-            within the shortest possible time.
-          </a>
-          <li>Diligence</li>
-          <a>
-            Research and confirm brands that present the strongest digital
-            growth opportunities and minimize risk.
-          </a>
-          <li>Technologies</li>
-          <a>
-            Design practice focused on digital experiences. We bring forth a
-            deep passion for problem-solving.
-          </a>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
         </ul>
       </section>
       <section>
         <h2>Our team</h2>
         <ul>
           <li>
-            <img src="images/img-3.png" alt="Mark Guerrero" />
-            <a> Mark Guerrero Product Designer </a>
+            <img
+              src="images/mark_guerrero.jpg"
+              alt="Mark Guerrero"
+              width="260"
+              height="264"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
           </li>
           <li>
-            <img src="images/img-2.png" alt="Tom Ford" />
-            <a> Tom Ford Frontend Developer </a>
+            <img
+              src="images/tom_ford.jpg"
+              alt="Tom Ford"
+              width="260"
+              height="264"
+            />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="images/img-1.png" alt="Camila Garcia" />
-            <a> Camila Garcia Marketing </a>
+            <img
+              src="images/camila_garcia.jpg"
+              alt="Camila Garcia"
+              width="260"
+              height="264"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
           </li>
           <li>
-            <img src="images/img.png" alt="Daniel Wilson" />
-            <a> Daniel Wilson UI Designer </a>
+            <img
+              src="images/daniel_wilson.jpg"
+              alt="Daniel Wilson"
+              width="260"
+              height="264"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <a href="/" class="link"> <img src="images/Logo.png" alt="logo" /></a>
+      <a href="/" class="link">WEBSTUDIO</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
