processed_index.html

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <header>
-      <a href="/index.html" class="link">WEBSTUDIO</a>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li>
             <a href="/" class="link">Studio</a>
@@ -38,6 +38,7 @@
         <button type="button">Order Service</button>
       </section>
       <section>
+        <h2>HIDE</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -69,45 +70,46 @@
           </li>
         </ul>
       </section>
+      <!--блок з командою-->
       <section>
         <h2>Our team</h2>
         <ul>
           <li>
             <img
-              src="images/mark_guerrero.jpg"
+              src="./images/mark_guerrero.jpg"
               alt="Mark Guerrero"
-              width="260"
-              height="264"
+              width="264"
+              height="260"
             />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <img
-              src="images/tom_ford.jpg"
+              src="./images/tom_ford.jpg"
               alt="Tom Ford"
-              width="260"
-              height="264"
+              width="264"
+              height="260"
             />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img
-              src="images/camila_garcia.jpg"
+              src="./images/camila_garcia.jpg"
               alt="Camila Garcia"
-              width="260"
-              height="264"
+              width="264"
+              height="260"
             />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img
-              src="images/daniel_wilson.jpg"
+              src="./images/daniel_wilson.jpg"
               alt="Daniel Wilson"
-              width="260"
-              height="264"
+              width="264"
+              height="260"
             />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
@@ -116,7 +118,7 @@
       </section>
     </main>
     <footer>
-      <a href="/" class="link">WEBSTUDIO</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
