processed_2_index.html

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </section>
       <!--блок з командою-->
       <section>
-        <h2>Our team</h2>
+        <h2>Our Team</h2>
         <ul>
           <li>
             <img
