--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WEBSTUDIO-Effective Solutions for Your Business</title>
+    <link rel="stylesheet" href="./styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Tangerine:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -76,7 +83,7 @@
         <ul>
           <li>
             <img
-              src="./images/mark_guerrero.jpg"
+              src="./images/our_team/mark_guerrero.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
@@ -86,7 +93,7 @@
           </li>
           <li>
             <img
-              src="./images/tom_ford.jpg"
+              src="./images/our_team/tom_ford.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
@@ -96,7 +103,7 @@
           </li>
           <li>
             <img
-              src="./images/camila_garcia.jpg"
+              src="./images/our_team/camila_garcia.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
@@ -106,13 +113,78 @@
           </li>
           <li>
             <img
-              src="./images/daniel_wilson.jpg"
+              src="./images/our_team/daniel_wilson.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
             />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/our_portfolio/bank_app.jpg"
+              alt="Banking App"
+              height="300"
+              width="360"
+            />
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="/images/our_portfolio/cashless_paym.jpg"
+              alt="Cashless Payment"
+              height="300"
+              width="360"
+            />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="/images/our_portfolio/meditation_app.jpg"
+              alt="Meditation App"
+              height="300"
+              width="360"
+            />
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="/images/our_portfolio/taxi_serv.jpg"
+              alt="Taxi Service"
+              height="300"
+              width="360"
+            />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="/images/our_portfolio/screen_ill.jpg"
+              alt="Screen Illustrations"
+              height="300"
+              width="360"
+            />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img
+              src="/images/our_portfolio/online_courses.jpg"
+              alt="Online Courses"
+              height="300"
+              width="360"
+            />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
           </li>
         </ul>
       </section>
