--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WEBSTUDIO-Effective Solutions for Your Business</title>
-    <link rel="stylesheet" href="./styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.css"
+      integrity="sha512-gnAN+RgTMylunXI7AMg+PtcUGpKZFkZJoFIkAWvdPFRrFJz3p2tx4+9xbjILRfN7CzoViMgS8vSf06fSQzWZjA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Tangerine:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -138,7 +145,7 @@
           </li>
           <li>
             <img
-              src="/images/our_portfolio/cashless_paym.jpg"
+              src="./images/our_portfolio/cashless_paym.jpg"
               alt="Cashless Payment"
               height="300"
               width="360"
@@ -148,7 +155,7 @@
           </li>
           <li>
             <img
-              src="/images/our_portfolio/meditation_app.jpg"
+              src="./images/our_portfolio/meditation_app.jpg"
               alt="Meditation App"
               height="300"
               width="360"
@@ -158,7 +165,7 @@
           </li>
           <li>
             <img
-              src="/images/our_portfolio/taxi_serv.jpg"
+              src="./images/our_portfolio/taxi_serv.jpg"
               alt="Taxi Service"
               height="300"
               width="360"
@@ -168,7 +175,7 @@
           </li>
           <li>
             <img
-              src="/images/our_portfolio/screen_ill.jpg"
+              src="./images/our_portfolio/screen_ill.jpg"
               alt="Screen Illustrations"
               height="300"
               width="360"
@@ -178,7 +185,7 @@
           </li>
           <li>
             <img
-              src="/images/our_portfolio/online_courses.jpg"
+              src="./images/our_portfolio/online_courses.jpg"
               alt="Online Courses"
               height="300"
               width="360"
