--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   </head>
   <body>
     <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
+      <nav class="nav-link">
+        <a href="./index.html" class="logo"><span>Web</span>Studio</a>
         <ul>
           <li>
             <a href="/" class="link">Studio</a>
@@ -47,9 +47,9 @@
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="main">
+        <h1 class="main-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="order">Order Service</button>
       </section>
       <section>
         <h2>HIDE</h2>
@@ -84,7 +84,6 @@
           </li>
         </ul>
       </section>
-      <!--блок з командою-->
       <section>
         <h2>Our Team</h2>
         <ul>
@@ -197,7 +196,7 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <a href="./index.html"><span>Web</span>Studio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
