--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     />
   </head>
   <body>
-    <header>
-      <nav class="nav-link">
+    <header class="header-design">
+      <nav>
         <a href="./index.html" class="logo"><span>Web</span>Studio</a>
-        <ul>
+        <ul class="nav-link">
           <li>
             <a href="/" class="link">Studio</a>
           </li>
@@ -36,56 +36,58 @@
         </ul>
       </nav>
       <address>
-        <ul>
+        <ul class="address-link">
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="contacts"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="contacts">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
     </header>
     <main>
-      <section class="main">
+      <section class="main-section">
         <h1 class="main-title">Effective Solutions for Your Business</h1>
         <button type="button" class="order">Order Service</button>
       </section>
-      <section>
-        <h2>HIDE</h2>
+      <section class="advantage-section">
+        <h2 hidden class="second-title">HIDE</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="advantage-section-title">Strategy</h3>
+            <p class="main-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="advantage-section-title">Punctuality</h3>
+            <p class="main-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="advantage-section-title">Diligence</h3>
+            <p class="main-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="advantage-section-title">Technologies</h3>
+            <p class="main-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
+      <section class="team-section">
+        <h2 class="second-title">Our Team</h2>
         <ul>
           <li>
             <img
@@ -94,8 +96,8 @@
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-name">Mark Guerrero</h3>
+            <p class="main-text">Product Designer</p>
           </li>
           <li>
             <img
@@ -104,8 +106,8 @@
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-name">Tom Ford</h3>
+            <p class="main-text">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -114,8 +116,8 @@
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-name">Camila Garcia</h3>
+            <p class="main-text">Marketing</p>
           </li>
           <li>
             <img
@@ -124,13 +126,13 @@
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-name">Daniel Wilson</h3>
+            <p class="main-text">UI Designer</p>
           </li>
         </ul>
       </section>
       <section>
-        <h2>Our Portfolio</h2>
+        <h2 class="second-title">Our Portfolio</h2>
         <ul>
           <li>
             <img
@@ -140,7 +142,7 @@
               width="360"
             />
             <h3>Banking App</h3>
-            <p>App</p>
+            <p class="main-text">App</p>
           </li>
           <li>
             <img
@@ -149,8 +151,8 @@
               height="300"
               width="360"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="product-name">Cashless Payment</h3>
+            <p class="main-text">Marketing</p>
           </li>
           <li>
             <img
@@ -159,8 +161,8 @@
               height="300"
               width="360"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="product-name">Meditation App</h3>
+            <p class="main-text">App</p>
           </li>
           <li>
             <img
@@ -169,8 +171,8 @@
               height="300"
               width="360"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="product-name">Taxi Service</h3>
+            <p class="main-text">Marketing</p>
           </li>
           <li>
             <img
@@ -179,8 +181,8 @@
               height="300"
               width="360"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="product-name">Screen Illustrations</h3>
+            <p class="main-text">Design</p>
           </li>
           <li>
             <img
@@ -189,15 +191,15 @@
               height="300"
               width="360"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="product-name">Online Courses</h3>
+            <p class="main-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html"><span>Web</span>Studio</a>
-      <p>
+    <footer class="footer-design">
+      <a href="./index.html" class="footer-logo"><span>Web</span>Studio</a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
