--- a/index.html
+++ b/index.html
@@ -22,20 +22,22 @@
   <body>
     <header class="header-design">
       <nav>
-        <a href="./index.html" class="logo"><span>Web</span>Studio</a>
+        <a href="./index.html" class="logo"
+          >Web<span class="logo-modificate">Studio</span></a
+        >
         <ul class="nav-link">
           <li>
-            <a href="/" class="link">Studio</a>
+            <a href="" class="link">Studio</a>
           </li>
           <li>
-            <a href="/" class="link">Portfolio</a>
+            <a href="" class="link">Portfolio</a>
           </li>
           <li>
-            <a href="/" class="link">Contacts</a>
+            <a href="" class="link">Contacts</a>
           </li>
         </ul>
       </nav>
-      <address>
+      <address class="address-design">
         <ul class="address-link">
           <li>
             <a href="mailto:info@devstudio.com" class="contacts"
@@ -51,7 +53,7 @@
     <main>
       <section class="main-section">
         <h1 class="main-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="order">Order Service</button>
+        <button type="button" class="action-button">Order Service</button>
       </section>
       <section class="advantage-section">
         <h2 hidden class="second-title">HIDE</h2>
@@ -89,7 +91,7 @@
       <section class="team-section">
         <h2 class="second-title">Our Team</h2>
         <ul>
-          <li>
+          <li class="team-windows">
             <img
               src="./images/our_team/mark_guerrero.jpg"
               alt="Mark Guerrero"
@@ -99,7 +101,7 @@
             <h3 class="team-name">Mark Guerrero</h3>
             <p class="main-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-windows">
             <img
               src="./images/our_team/tom_ford.jpg"
               alt="Tom Ford"
@@ -109,7 +111,7 @@
             <h3 class="team-name">Tom Ford</h3>
             <p class="main-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-windows">
             <img
               src="./images/our_team/camila_garcia.jpg"
               alt="Camila Garcia"
@@ -119,7 +121,7 @@
             <h3 class="team-name">Camila Garcia</h3>
             <p class="main-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-windows">
             <img
               src="./images/our_team/daniel_wilson.jpg"
               alt="Daniel Wilson"
@@ -141,7 +143,7 @@
               height="300"
               width="360"
             />
-            <h3>Banking App</h3>
+            <h3 class="product-name">Banking App</h3>
             <p class="main-text">App</p>
           </li>
           <li>
@@ -198,7 +200,9 @@
       </section>
     </main>
     <footer class="footer-design">
-      <a href="./index.html" class="footer-logo"><span>Web</span>Studio</a>
+      <a href="./index.html" class="logo"
+        >Web<span class="footer-logo">Studio</span></a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
