--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         >
         <ul class="nav-link">
           <li>
-            <a href="" class="link">Studio</a>
+            <a href="./index.html" class="link">Studio</a>
           </li>
           <li>
             <a href="" class="link">Portfolio</a>
